--- a/cs-monkey/App.config
+++ b/cs-monkey/App.config
@@ -6,6 +6,10 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <probing privatePath="lib;libs" />
+      <dependentAssembly>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
