--- a/cs-monkey/packages.config
+++ b/cs-monkey/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
-  <package id="cef.redist.x64" version="79.1.35" targetFramework="net452" />
-  <package id="cef.redist.x86" version="79.1.35" targetFramework="net452" />
-  <package id="CefSharp.Common" version="79.1.350" targetFramework="net452" />
-  <package id="CefSharp.OffScreen" version="79.1.350" targetFramework="net452" />
-  <package id="CommandLineParser" version="2.7.82" targetFramework="net452" />
-  <package id="MailKit" version="2.5.0" targetFramework="net452" />
-  <package id="MimeKit" version="2.5.0" targetFramework="net452" />
-  <package id="YamlDotNet" version="8.1.0" targetFramework="net452" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net452" />
+  <package id="cef.redist.x64" version="84.4.1" targetFramework="net452" />
+  <package id="cef.redist.x86" version="84.4.1" targetFramework="net452" />
+  <package id="CefSharp.Common" version="84.4.10" targetFramework="net452" />
+  <package id="CefSharp.OffScreen" version="84.4.10" targetFramework="net452" />
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net452" />
+  <package id="MailKit" version="2.9.0" targetFramework="net452" />
+  <package id="MimeKit" version="2.9.2" targetFramework="net452" />
+  <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net452" />
+  <package id="YamlDotNet" version="8.1.2" targetFramework="net452" />
 </packages>
